[package]
publish = false
name = "place145"
version = "0.0.0"
authors = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "/r/place clone"
license = "MIT"
repository = "https://github.com/dmitmel/place145.git"
homepage = "https://github.com/dmitmel/place145"

[dependencies]
actix = "0.7"
actix_derive = "*"
actix-web = "0.7"
bincode = "1.0"
env_logger = "*"
futures = "*"
log = "*"
serde = "1.0"
serde_derive = "1.0"
